# smarttools10x

./: BasicInstallOnLinux.md  InstalacionPersonalEnLinux.md  Linux2.6i686.tuning  ProjectHome.md  configure  copy_gpl.sh  evo-x.prd  get_sources.sh  linux.spawn  solaris.spawn  v10.configure
CVS/: Entries  Repository
bin.ss/CVS/: Entries  Repository
bin.ss/browse.p/: browse.Application.cc  browse.sccs.cc  gpl.txt  linux.spawn  main.cc  makefile.config  makefile.x.config  solaris.spawn
bin.ss/browse.p/CVS/: Entries  Repository
bin.ss/browse.p/gnu.install/: ChangeLog  Makefile.am  configure.in
bin.ss/browse.p/hdrs/: smart.browse.Application.h  smart.browse.sccs.h
bin.ss/browse.p/whats_new/: 10.0.1.version
bin.ss/configure.p/: .cproject  .project  configure.Application.cc  configure.CppCompiler.cc  configure.Directory.cc  configure.Outline.cc  configure.Resource.cc  configure.Tuning.cc  configure.Vendor.cc  configure.Version.cc  configure.sccs.cc  linux.spawn  main.cc  makefile.config  makefile.order  makefile.x.config  solaris.spawn
bin.ss/configure.p/CVS/: Entries  Repository
bin.ss/configure.p/gnu.install/: ChangeLog  Makefile.am  configure.in
bin.ss/configure.p/gnu.install/CVS/: Entries  Repository
bin.ss/configure.p/hdrs/: smart.configure.Application.h  smart.configure.CppCompiler.h  smart.configure.Directory.h  smart.configure.Outline.h  smart.configure.Resource.h  smart.configure.Tuning.h  smart.configure.Vendor.h  smart.configure.Version.h  smart.configure.sccs.h
bin.ss/configure.p/whats_new/: 10.0.1.version  10.0.10.version  10.0.11.version  10.0.12.version  10.0.13.version  10.0.14.version  10.0.15.version  10.0.2.version  10.0.3.version  10.0.4.version  10.0.5.version  10.0.6.version  10.0.7.version  10.0.8.version  10.0.9.version  11.0.1.version
bin.ss/generate.p/: .cproject  .project  generate.Agent.cc  generate.Application.cc  generate.Command.cc  generate.Executable.cc  generate.FileSystem.cc  generate.Library.cc  generate.LogicalGroup.cc  generate.Makefile.cc  generate.Prototype.cc  generate.SourceContainer.cc  generate.Structure.cc  generate.defines.cc  generate.sccs.cc  linux.spawn  main.cc  makefile.config  makefile.order  solaris.spawn
bin.ss/generate.p/CVS/: Entries  Repository
bin.ss/generate.p/gnu.install/: ChangeLog  Makefile.am  configure.in
bin.ss/generate.p/gnu.install/CVS/: Entries  Repository
bin.ss/generate.p/hdrs/: smart.generate.Agent.h  smart.generate.Application.h  smart.generate.AutoPointer.h  smart.generate.Command.h  smart.generate.Executable.h  smart.generate.FileSystem.h  smart.generate.Library.h  smart.generate.LogicalGroup.h  (+7 more)
bin.ss/libSmart.analysis.b/: .cproject  .project  analysis.ASN1Source.cc  analysis.Application.cc  analysis.CSource.cc  analysis.FileSystem.cc  analysis.Scanner.cc  analysis.sccs.cc  gpl.txt  linux.spawn  solaris.spawn
bin.ss/libSmart.analysis.b/gnu.install/: ChangeLog  Makefile.am  configure.in
bin.ss/libSmart.analysis.b/gnu.install/CVS/: Repository
bin.ss/libSmart.core.b/: .cproject  .project  core.Variable.cc  core.functions.cc  core.sccs.cc  linux.spawn  solaris.spawn
bin.ss/libSmart.core.b/gnu.install/: Makefile.am  README  configure.in
bin.ss/libSmart.core.b/gnu.install/CVS/: Entries  Repository
bin.ss/libSmart.description.b/: .cproject  .project  description.MetaCommand.cc  description.MetaLine.cc  description.Rule.cc  description.RuleAgent.cc  description.Target.cc  description.functions.cc  description.sccs.cc  gpl.txt  linux.spawn  solaris.spawn
bin.ss/libSmart.description.b/gnu.install/: ChangeLog  Makefile.am  configure.in
bin.ss/libSmart.description.b/gnu.install/CVS/: Entries  Repository
bin.ss/libSmart.structure.b/: .cproject  .project  INSTALL  gpl.txt  linux.spawn  solaris.spawn  structure.Agent.cc  structure.Resource.cc  structure.Section.cc  structure.sccs.cc
bin.ss/libSmart.structure.b/gnu.install/: ChangeLog  Makefile.am  configure.in
bin.ss/libSmart.structure.b/gnu.install/CVS/: Entries  Repository
bin.ss/onlinehelp.p/: .cproject  .project  AUTHORS  main.cc  makefile.config  makefile.x.config  onlinehelp.Application.cc  onlinehelp.Document.cc  onlinehelp.Frame.cc  onlinehelp.LibraryDoxygen.cc  onlinehelp.LibraryKdoc.cc  onlinehelp.sccs.cc
bin.ss/onlinehelp.p/gnu.install/: ChangeLog  Makefile.am  configure.in
bin.ss/onlinehelp.p/gnu.install/CVS/: Entries  Repository
bin.ss/snooper.p/: .cproject  .project  MainWindow.ui  go  main.cc  makefile.x.config  makefile.x.resources  qt.include  snooper.Application.cc  snooper.EnvironVariable.cc  snooper.MainWindow.cc  snooper.MakefileVariable.cc  snooper.sccs.cc
makefile.ss/CVS/: Entries  Repository
makefile.ss/checksum.p/: .cproject  .project  checksum.cc  linux.spawn  makefile.x.config  solaris.spawn
makefile.ss/checksum.p/gnu.install/: ChangeLog  Makefile.am  configure.in
makefile.ss/checksum.p/gnu.install/CVS/: Entries  Repository
makefile.ss/configuration.bk/: config.xml  create.minimal  flex.sh  go  makefile  proc.sh  soap.sh  wsdl.sh
makefile.ss/configure.sh/: SmartConfigure
makefile.ss/has_resources.p/: has_resources.cc  linux.spawn  makefile.config  makefile.x.config  solaris.spawn
makefile.ss/has_resources.p/gnu.install/: Makefile.am  configure.in
makefile.ss/has_resources.p/gnu.install/CVS/: Entries  Repository
makefile.ss/ils.p/: .cproject  .project  ils.Shuffler.cc  ils.Target.cc  ils.cc  linux.spawn  makefile.config  solaris.spawn
makefile.ss/ils.p/gnu.install/: Makefile.am  NEWS  configure.in
makefile.ss/ils.p/gnu.install/CVS/: Entries  Repository
makefile.ss/ils_mkdir.p/: ils_mkdir.cc  linux.spawn  makefile.config  makefile.x.config  solaris.spawn
makefile.ss/install.sh/: SmartInstall
makefile.ss/smake.p/: .cproject  .project  linux.spawn  makefile.resources  makefile.x.config  smake.Application.cc  smake.Shuffler.cc  smake.Target.cc  smake.main.cc  smake.sccs.cc  solaris.spawn
makefile.ss/smake.p/gnu.install/: Makefile.am  configure.in
makefile.ss/smake.p/gnu.install/CVS/: Repository
makefile.ss/upgrade_config.sh/: upgrade_config
(+727 files in other folders)
